helm/src/mes-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mesapi
  name: mes-api-service
spec:
  selector:
    app: mes-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
